# aoc2022

./: Cargo.toml  LICENSE  template
src/: lib.rs  main.rs
src/day02/: main.rs
src/day03/: main.rs
src/day05/: main.rs
src/day06/: main.rs
src/day07/: main.rs
src/day08/: input.in  main.rs
src/day09/: main.rs
src/day1/: main.rs
src/day10/: main.rs
src/day11/: main.rs
src/day12/: main.rs
src/day13/: main.rs
src/day14/: main.rs
src/day15/: main.rs
src/day16/: main.rs
src/day2/: main.rs
