[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
default-run = "aoc2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
itertools = "0.10.5"
regex = "1.7.0"


[[bin]]
name = "aoc2022"
src = "src/main.rs"

[profile.dev]
# opt-level = 3

[profile.release]
# lto = "thin"